--- a/Resources/front/app/index.html
+++ b/Resources/front/app/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -24,16 +24,19 @@
             </ul>
         </div><!--/.nav-collapse -->
     </div>
-</div>
+</header>
 
-<div class="container">
+<section id="content" class="container">
 
     <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
     </div>
 
-</div><!-- /.container -->
+</section><!-- /.container -->
+<footer id="footer">
+
+</footer>
 <script data-main="assets/js/main.js" src="assets/js/vendor/requirejs/require.js"></script>
 </body>
 </html>
