create sync task create controller

--- a/Resources/front/index.html
+++ b/Resources/front/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/js/vendor/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
 <body>
 <header id="header" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
