--- a/Resources/front/index.html
+++ b/Resources/front/index.html
@@ -6,34 +6,39 @@
     <link rel="stylesheet" href="assets/css/main.css"/>
 </head>
 <body>
-<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<header id="header">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Project name</a>
+        <div class="row">
+            <a href="/" class="logo col-md-6">
+                <img src="assets/img/logo.png" alt="DiamanteDesk"/>
+            </a>
+            <div class="col-md-6">
+                <div class="profile pull-right">
+                    <button class="btn btn-link dropdown-toggle" type="button" id="dropdown-profile" data-toggle="dropdown">
+                        Jason Flinstone
+                        <span class="caret"></span>
+                    </button>
+                </div>
+                <div class="quick-access pull-right">
+                    <div class="search-field form-group form-group-lg">
+                        <input type="search" class="form-control" placeholder="Search"/>
+                    </div>
+                    <div class="create-ticket form-group form-group-lg">
+                        <button class="btn btn btn-primary">
+                            Add New Ticket
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="#tasks">Tasks</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
     </div>
 </header>
 
 <section id="content" class="container">
-
     <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
     </div>
-
 </section><!-- /.container -->
 <footer id="footer">
 
