--- a/Resources/front/index.html
+++ b/Resources/front/index.html
@@ -35,14 +35,22 @@
 </header>
 
 <section id="content" class="container">
+
     <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
     </div>
+
 </section><!-- /.container -->
+
 <footer id="footer">
 
 </footer>
+
+<div id="dialog">
+
+</div>
+
 <script data-main="assets/js/main.js" src="assets/js/vendor/requirejs/require.js"></script>
 </body>
 </html>
