change index page, add some changes for modules loading

--- a/Resources/front/index.html
+++ b/Resources/front/index.html
@@ -13,8 +13,7 @@
 <section id="content" class="container">
 
     <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1 style="text-align: center;">Loading ...</h1>
     </div>
 
 </section><!-- /.container -->
