- Fix upgrade issues

--- a/public/notinstalled.html
+++ b/public/notinstalled.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <h1>The application is not installed.</h1>
-        <p>Please, follow the installation guidance provided here: <a href="https://docs.diamantedesk.com/en/latest/installation-guide/">https://oroinc.com/orocrm/doc/current/install-upgrade/installation</a></p>
+        <p>Please, follow the installation guidance provided here: <a href="https://docs.diamantedesk.com/en/latest/installation-guide/">https://docs.diamantedesk.com/en/latest/installation-guide</a></p>
     </body>
 </html>
